Changed title into Gamerbude der Minezocker GmbH

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Gamerbude by gamerbude</title>
+    <title>Gamerbude der Minezocker GmbH</title>
   </head>
 
   <body>
