Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Gamerbude der Minezocker GmbH</title>
+    <title>Gamerbude by gamerbude</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
         <h1>Gamerbude</h1>
-        <h2></h2>
+        <h2>Gamerbude der Minezocker GmbH</h2>
         <a href="https://github.com/gamerbude" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
