Make Gamerbude (title) to a Link

--- a/letsplays.html
+++ b/letsplays.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Gamerbude</h1>
+        <h1><a href="https://gamerbude.github.io/index.html">Gamerbude</a></h1>
         <h2>Let's Plays</h2>
         <a href="https://github.com/gamerbude" class="button"><small>Follow me on</small> GitHub</a>
       </div>
