--- a/lp/minetest-pre/overview.html
+++ b/lp/minetest-pre/overview.html
@@ -14,7 +14,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Gamerbude</title>
+    <title>Minetest Pre-LP - Gamerbude</title>
   </head>
 
   <body>
