--- a/lp/minetest-pre/overview.html
+++ b/lp/minetest-pre/overview.html
@@ -21,7 +21,7 @@
     <header>
       <div class="inner">
         <h1><a href="https://gamerbude.github.io/index.html">Gamerbude</a></h1>
-        <h2>Let's Plays</h2>
+        <h2><a href="https://gamerbude.github.io/letsplays">Alle Let's Plays</a></h2>
         <a href="https://github.com/gamerbude" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
