--- a/lp/minetest-pre/index.html
+++ b/lp/minetest-pre/index.html
@@ -34,8 +34,8 @@
           <p>Das sind die ersten Let's Play-Versuche von mir und JBB. Es sind im Moment ca. 3 Stunden Minetest auf meinem aber manchmal auch auf anderen Servern.<br />Hier fehlen einige Folgennummern, da ich ab und zu mal kleine Videos hochlade in denen meistens nichts sehr spannedes passiert. Fast alle von ihnen sind ohne Stimme von mir, aber sie haben tolle Thumbnails so dass jeder denkt, dass sie ganz toll wären und dann bemerkt "Oh! Is ja doch Scheiße".</p>
           <hr />
           
-          <img src="https://i.ytimg.com/vi/BUnP46V4Sp4/maxresdefault.jpg" alt="" />
-
+          <p><img src="https://i.ytimg.com/vi/BUnP46V4Sp4/maxresdefault.jpg" alt="" />
+          Minetest-Pre [017] - Einmal auf den Mond und zurück | Let's Play Minetest Together</p>
           
         </section>
 
