--- a/l/lp-0000.html
+++ b/l/lp-0000.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0; url=https://gamerbude.github.io/lp/minetest-pre/index.html" />
+		<meta http-equiv="refresh" content="0; url=../lp/minetest-pre/index.html" />
 	</head>
 </html>
