--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
       <div class="inner">
         <h1>Gamerbude</h1>
-        <h2>Minezocker GmbH</h2>
+        <h2>der Minezocker GmbH</h2>
         <a href="https://github.com/gamerbude" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
