--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="https://gamerbude.github.io/stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://gamerbude.github.io/stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://gamerbude.github.io/stylesheets/print.css" media="print">
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
     
     <title>404 - Gamerbude</title>
@@ -16,7 +16,7 @@
     
     <header>
       <div class="inner">
-        <h1>Gamerbude</h1>
+        <h1><a href="https://gamerbude.github.io/index.html">Gamerbude</h1>
         <h2>der Minezocker GmbH</h2>
         <a href="https://github.com/gamerbude" class="button"><small>Follow me on</small> GitHub</a>
       </div>
@@ -28,12 +28,12 @@
           <h1>404 - Nothing found!</h1>
           <large><p>
             Na, was hast du jetzt wieder angestellt??
-            Aber du kannst dir natürlich eines unserer neuen <a href="letsplays.html">Let's Plays</a> angucken!
+            Aber du kannst dir natürlich eines unserer neuen <a href="https://gamerbude.github.io/letsplays.html">Let's Plays</a> angucken!
           </p></large>
         </section>
 
         <aside id="sidebar">
-          <iframe src="items/sidebar.html" frameborder=0 />
+          <iframe src="https://gamerbude.github.io/items/sidebar.html" frameborder=0 />
         </aside>
       </div>
     </div>
