--- a/404.html
+++ b/404.html
@@ -22,7 +22,15 @@
       </div>
     </header>
     
-     <div id="content-wrapper">
+    <div class="navigation">
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="letsplays.html">Let's Plays</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
+      </ul>
+    </div>
+    
+    <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
           <h1>404 - Nothing found!</h1>
