--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
       </div>
     </header>
 
+    <div class="navigation">
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="letsplays.html">Let's Plays</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
+      </ul>
+    </div>
+
     <div id="content-wrapper">
       <div class="inner clearfix">
         
