--- a/letsplays.html
+++ b/letsplays.html
@@ -25,6 +25,14 @@
         <a href="https://github.com/gamerbude" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
+    
+    <div class="navigation">
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="letsplays.html">Let's Plays</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
+      </ul>
+    </div>
 
     <div id="content-wrapper">
       <div class="inner clearfix">
