--- a/lp/minetest-pre/index.html
+++ b/lp/minetest-pre/index.html
@@ -25,7 +25,15 @@
         <a href="https://github.com/gamerbude" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
-
+    
+    <div class="navigation">
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="letsplays.html">Let's Plays</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
+      </ul>
+    </div>
+    
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
