Fix Navigation bar active site

--- a/lp/minetest-pre/index.html
+++ b/lp/minetest-pre/index.html
@@ -28,8 +28,8 @@
     
     <div class="navigation">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="letsplays.html">Let's Plays</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="letsplays.html" class="active">Let's Plays</a></li>
         <li><a href="contact.html">Kontakt</a></li>
       </ul>
     </div>
