--- a/letsplays.html
+++ b/letsplays.html
@@ -28,9 +28,9 @@
     
     <div class="navigation">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="letsplays.html">Let's Plays</a></li>
-        <li><a href="contact.html">Kontakt</a></li>
+        <li><a href="contact.html" class="active">Kontakt</a></li>
       </ul>
     </div>
 
