--- a/letsplays.html
+++ b/letsplays.html
@@ -18,6 +18,15 @@
   </head>
 
   <body>
+
+    <div class="navigation">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="letsplays.html" class="active">Let's Plays</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
+      </ul>
+    </div>
+    
     <header>
       <div class="inner">
         <h1><a href="index.html">Gamerbude</a></h1>
@@ -25,14 +34,6 @@
         <a href="https://github.com/gamerbude" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
-    
-    <div class="navigation">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="letsplays.html">Let's Plays</a></li>
-        <li><a href="contact.html" class="active">Kontakt</a></li>
-      </ul>
-    </div>
 
     <div id="content-wrapper">
       <div class="inner clearfix">
