Change text of 404.html

--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
           <h1>404 - Nothing found!</h1>
           <large><p>
             Na, was hast du jetzt wieder angestellt??
-            Aber du kannst dir natürlich eines unserer neuen <a href="https://gamerbude.github.io/letsplays.html">Let's Plays</a> angucken!
+            Naja, egal! Guck dir einfach eines unserer neuen <a href="https://gamerbude.github.io/letsplays.html">Let's Plays</a> an!! :smiley:
           </p></large>
         </section>
 
