Better style in letsplays.html

--- a/letsplays.html
+++ b/letsplays.html
@@ -42,7 +42,7 @@
           <h2><span class="octicon octicon-link"></span>Hier sind alle Let's Plays der Gamerbude aufgelistet!</h2>
           
           <hr />
-          <div class="hover-shadow">
+          <div class="games">
             <a href="./l/lp-0000.html"><img src="images/lps/minetest-pre.png" alt="" style="width:320px;height:480px;"></a>
           </div>
           
