Add tng.html and remove LPs

--- a/tng.html
+++ b/tng.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
 
-    <title>Gamerbude</title>
+    <title>Minetest TNG // Gamerbude</title>
   </head>
 
   <body>
 
     <div class="navigation">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
 <!--         <li><a href="minetest.html">Minetest</a></li> -->
-        <li><a href="tng.html">Minetest TNG</a></li>
+        <li><a href="tng.html" class="active">Minetest TNG</a></li>
 <!--        <li><a href="contact.html">Kontakt</a></li> -->
       </ul>
     </div>
@@ -36,8 +36,13 @@
       <div class="inner clearfix">
         
         <section id="main-content">
-          <h2><span class="octicon octicon-link" />Gamerbude</h2>
+          <h1><span class="octicon octicon-link" />Minetest TNG</h1>
           <hr />
+          <img src="https://github.com/gamerbude/minetest_tng/raw/master/menu/header.png" align="center" />
+          <h2><span class="octicon octicon-link" />Whats that?</h2>
+          <p>Minetest TNG is a subgame for the Minetest Game-Engine. It's based on the default Game, Minetest Game (MTG). The normal game for Minetest is very minimal and has near no survival aspect, we want to change that! But without a big loss of performace.</p>
+          <h2><span class="octicon octicon-link" />Screenshots</h2>
+          
         </section>
 
         <aside id="sidebar">
