tng.html: Add Download and Bug tracker

--- a/tng.html
+++ b/tng.html
@@ -43,6 +43,22 @@
           <p>Minetest TNG is a subgame for the Minetest Game-Engine. It's based on the default Game, Minetest Game (MTG). The normal game for Minetest is very minimal and has near no survival aspect, we want to change that! But without a big loss of performace.</p>
           <h2><span class="octicon octicon-link" />Screenshots</h2>
           
+          <h2><span class="octicon octicon-link" />Download</h2>
+          <p>We provide several versions: a stable version (released monthly), a server version for supporting old clients (rolling release) and a “La-Test” version (rolling release).</p>
+          <p>
+          <a href="https://github.com/gamerbude/minetest_tng/archive/master.zip">La-Test Version</a> (for MT 0.4.14)<br />
+          <a href="https://github.com/gamerbude/minetest_tng/archive/stable-srv.zip">Server Version</a> (for MT 0.4.13)<br />
+          <br />
+          <a href="https://github.com/gamerbude/minetest_tng/archive/v16.04-2.zip">Stable Version 16.04-2 - April</a> (for MT 0.4.14)<br />
+          <a href="https://github.com/gamerbude/minetest_tng/archive/v16.04-1.zip">Stable Version 16.04-1 - April</a> (for MT 0.4.13)<br />
+          <br />
+          <b>Old Releases:</b><br />
+          <a href="https://github.com/gamerbude/minetest_tng/archive/v16.03.zip">Stable Version 16.03 - March</a> (for MT 0.4.13)<br />
+          </p>
+          <h2><span class="octicon octicon-link" />Bug tracker / Suggestions</h2>
+          <p>If you found a bug please create an issue on GitHub, so we can fix it! ;)<br />
+          If you only want to suggest something you can create an issue too!<p />
+          <a target="_blank" href="https://github.com/Gamerbude/Minetest_TNG/issues/new">Create an issue</a> (It'll open in a new tab)
         </section>
 
         <aside id="sidebar">
