TNG: Update Wallpaper

--- a/tng.html
+++ b/tng.html
@@ -45,7 +45,7 @@
 					<p>Minetest TNG is a subgame for the Minetest Game-Engine. It's based on the default Game, Minetest Game (MTG). The normal game for Minetest is very minimal and has near no survival aspect, we want to change that! But without a big loss of performace.</p>
 					<!-- Screenshots -->
 					<h2><span class="octicon octicon-link" />Screenshots</h2>
-					<img class="shdw-img" src="http://i.imgur.com/iRSaqwL.jpg">
+					<img class="shdw-img" src="http://i.imgur.com/lnsvr1y.jpg">
 					<!-- Download -->
 					<h2><span class="octicon octicon-link" />Download</h2>
 					<p>We provide several versions: a stable version (released monthly), a server version for supporting old clients (rolling release) and a “La-Test” version (rolling release).</p>
