TNG: Add v16.06 to downloads

--- a/tng.html
+++ b/tng.html
@@ -53,9 +53,10 @@
 					<a href="https://github.com/gamerbude/minetest_tng/archive/master.zip">La-Test Version</a> (for MT 0.4.14)<br />
 					<a href="https://github.com/gamerbude/minetest_tng/archive/stable-srv.zip">Server Version</a> (for MT 0.4.13)<br />
 					<br />
-					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.05.zip">Stable Version 16.05 - May - The Tree Update</a> (for MT 0.4.14)<br />
+					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.06.zip">Stable Version 16.06 - June - The Farming Update</a> (for MT 0.4.14)<br />
 					<br />
 					<b>Old Releases:</b><br />
+					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.05.zip">Stable Version 16.05 - May - The Tree Update</a> (for MT 0.4.14)<br />
 					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.04-2.zip">Stable Version 16.04-2 - April</a> (for MT 0.4.14)<br />
 					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.04-1.zip">Stable Version 16.04-1 - April</a> (for MT 0.4.13)<br />
 					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.03.zip">Stable Version 16.03 - March</a> (for MT 0.4.13)<br />
