--- a/tng.html
+++ b/tng.html
@@ -45,7 +45,8 @@
 					<p>Minetest TNG is a subgame for the Minetest Game-Engine. It's based on the default Game, Minetest Game (MTG). The normal game for Minetest is very minimal and has near no survival aspect, we want to change that! But without a big loss of performace.</p>
 					<!-- Screenshots -->
 					<h2><span class="octicon octicon-link" />Screenshots</h2>
-					<img class="shdw-img" src="http://i.imgur.com/lnsvr1y.jpg">
+					<img class="shdw-img" src="http://imgur.com/mILAR5n.jpg"><br/><br/>
+					<b><a href="./tng_wallpaper.html">More Wallpapers (+ lossless versions)</a></b>
 					<!-- Download -->
 					<h2><span class="octicon octicon-link" />Download</h2>
 					<p>We provide several versions: a stable version (released monthly), a server version for supporting old clients (rolling release) and a “La-Test” version (rolling release).</p>
@@ -53,13 +54,14 @@
 					<a href="https://github.com/gamerbude/minetest_tng/archive/master.zip">La-Test Version</a> (for MT 0.4.14)<br />
 					<a href="https://github.com/gamerbude/minetest_tng/archive/stable-srv.zip">Server Version</a> (for MT 0.4.13)<br />
 					<br />
-					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.06.zip">Stable Version 16.06 - June - The Farming Update</a> (for MT 0.4.14)<br />
+					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.07.zip">Stable Version 16.07 - July - The Latest Update</a> (for MT 0.4.14)<br />
 					<br />
 					<b>Old Releases:</b><br />
+					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.06.zip">Stable Version 16.06 - June - The Farming Update</a> (for MT 0.4.14)<br />
 					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.05.zip">Stable Version 16.05 - May - The Tree Update</a> (for MT 0.4.14)<br />
-					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.04-2.zip">Stable Version 16.04-2 - April</a> (for MT 0.4.14)<br />
-					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.04-1.zip">Stable Version 16.04-1 - April</a> (for MT 0.4.13)<br />
-					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.03.zip">Stable Version 16.03 - March</a> (for MT 0.4.13)<br />
+					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.04-2.zip">Stable Version 16.04-2 - April - The Second Update</a> (for MT 0.4.14)<br />
+					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.04-1.zip">Stable Version 16.04-1 - April - The First Update</a> (for MT 0.4.13)<br />
+					<a href="https://github.com/gamerbude/minetest_tng/archive/v16.03.zip">Stable Version 16.03 - March - The First Release</a> (for MT 0.4.13)<br />
 					</p>
 					<h2><span class="octicon octicon-link" />Bug tracker / Suggestions</h2>
 					<p>If you found a bug please create an issue on GitHub, so we can fix it! ;)<br />
